# BlackMamba

./: CMakeLIsts.txt  LICENSE  readme.md
src/: CMakeLists.txt  main.cpp
src/common/: checkError.cpp
src/game/: game.cpp
src/game/entity/: camera.cpp  player.cpp  skybox.cpp  terrain.cpp
src/game/material/: explosionMaterial.cpp  phongMaterial.cpp  skyboxMaterial.cpp  terrainMaterial.cpp  transparentMaterial.cpp
src/game/utils/: utils.cpp
src/include/common/: macro.h
src/include/game/: game.h
src/include/game/entity/: camera.h  player.h  skybox.h  terrain.h
src/include/game/material/: explosionMaterial.h  phongMaterial.h  skyboxMaterial.h  terrainMaterial.h  transparentMaterial.h
src/include/game/utils/: utils.h
src/include/runtime/: engine.h
src/include/runtime/framework/component/: component.h
src/include/runtime/framework/object/: gameObject.h
src/include/runtime/framework/system/: audioSystem.h  physicalSystem.h  renderSystem.h  windowSystem.h
src/include/runtime/resource/: model.h  resourceManager.h  shader.h
src/include/runtime/resource/audio/: audio.h
src/runtime/: engine.cpp
src/runtime/framework/object/: gameObject.cpp
src/runtime/framework/system/: audioSystem.cpp  physicalSystem.cpp  renderSystem.cpp  windowSystem.cpp
src/runtime/resource/: resourceManager.cpp  shader.cpp
src/runtime/resource/audio/: audio.cpp
src/runtime/resource/geometry/: geometry.cpp
src/runtime/resource/material/: material.cpp  whiteMaterial.cpp
src/runtime/resource/shader/: shader.cpp
src/runtime/resource/texture/: texture.cpp
(+46 files in other folders)
